项目开发目录初步完成

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
-	<link rel="stylesheet" href="css/index.css">
+	<title>博客</title>
+	
 </head>
 <body>
-	
-	<script src="js/lib.js"></script>
-	<script src="js/index.js"></script>
+	<div>{POST_PATH}/vi/test.php</div>
+	<script src="static/js/lib.js"></script>
+	<script src="static/js/index.js"></script>
 </body>
 </html>
