--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>博客</title>
+	<title>前端之路，勇往直前--李运的技术博客</title>
 	<link rel="stylesheet" href="./static/css/index.css">
 </head>
 
