恢复到全局的弹窗和confirm；  重写新增文章的逻辑； 新增添加图片的返回操作； file方法与post保持一致的返回内容；

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
 
 <body>
 	<div class="container_wrapper" ui-view=""></div>
+	<div app-alert=""  ng-show="alertVisiable"></div>
+	<div app-confirm=""  ng-show="confirmVisiable"></div>
 	<script src="./static/js/lib.js"></script>
 	<script src="./static/js/index.js"></script>
 </body>
